--- a/onepawservices.html
+++ b/onepawservices.html
@@ -199,7 +199,7 @@
       <p>*One Paw is located in Millbrook*</p>
       
       <br>
-      <a class="w3-button w3-large w3-teal" href="https://www.facebook.com/onepawatatimedt" title="Facebook"><i class="fa fa-facebook"></i></a>
+      <a class="w3-button w3-large w3-teal" href= title="Facebook"><i class="fa fa-facebook"></i></a>
 <a class="w3-button w3-large w3-teal" href="https://www.instagram.com/onepawk9/" title="Instagram"><i class="fa fa-instagram"></i></a>
       
     </div>
