--- a/onepawhomepage.html
+++ b/onepawhomepage.html
@@ -97,7 +97,7 @@
     <div class="w3-content" style="max-width:2000px">
 
         <div class="mySlides w3-display-container w3-center">
-            <img src="hacked.jpg" style="width:100%">
+            <img src="newalert.jpg" style="width:100%">
             <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
    
           
